# jenv-assessment

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  api-tester.html  docker-compose.yaml  g2_categories.json  openapi.yaml  pyproject.toml  run.py
.github/workflows/: ci.yaml
app/: __init__.py
app/api/v1/: __init__.py
app/api/v1/routes/: auth.py  health.py  todos.py
app/core/: config.py  database.py
app/migrations/: env.py
app/migrations/versions/: 78f2291d1b94_initial.py
app/models/: __init__.py  enums.py  todo.py  user.py
app/schemas/: __init__.py  common.py  todo.py  user.py
app/services/: __init__.py  auth_service.py  todo_service.py
tests/: conftest.py
tests/test_routes/: test_auth.py  test_health.py  test_todos.py
tests/test_services/: test_auth_service.py  test_todo_service.py
