[project]
name = "jenv-assessment"
version = "0.1.0"
description = "Flask TODO application for Jenv assessment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "flask>=3.1.2",
    "flask-cors>=5.0.0",
    "flask-jwt-extended>=4.7.1",
    "flask-swagger-ui>=4.11.1",
    "gunicorn>=23.0.0",
    "bcrypt>=4.2.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
